--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 server.port=6969
-spring.datasource.url=jdbc:postgresql://localhost:5432/Hotel_Management
-spring.datasource.username=postgres
-spring.datasource.password=chhith09828
+
+# ---------------------------------------------Local Configuration---------------------------------------------- #
+#spring.datasource.url=jdbc:postgresql://localhost:5432/Hotel_Management
+#spring.datasource.username=postgres
+#spring.datasource.password=chhith09828
+# -------------------------------------------------------------------------------------------------------------- #
+
+# ---------------------------------------------RDS Configuration------------------------------------------------ #
+spring.datasource.url=jdbc:postgresql://mydatabase-instance.cgjybnjvmtc2.ap-southeast-1.rds.amazonaws.com:5432/Hotel_Management
+spring.datasource.username=SeyNa
+spring.datasource.password=SeyNa02042022
+# -------------------------------------------------------------------------------------------------------------- #
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
